--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 
 body {
@@ -20,11 +20,11 @@ body {
 }
 
 #img-left-botton {
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
   position: absolute;
-  left: 50px;
-  bottom: -10px;
+  left: 120px;
+  bottom: 0px;
 }
 
 #img-left-top {
@@ -93,7 +93,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.7);
   outline: none;
   background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(5px);
   padding-left: 30px;
   font-family: Lato, sans-serif;
   font-size: 20px;
@@ -125,4 +125,109 @@ body {
   position: absolute;
   top: 12px;
   right: -20px;
+  transition: 800ms;
+  text-transform: uppercase;
+}
+
+.info__submit button:hover {
+  cursor: pointer;
+  background-color: #ffffff;
+  color: #4f3aa7;
+  transition: 800ms;
+}
+
+.info__card .card {
+  margin-top: 53px;
+  width: 500px;
+  height: 300px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(15px);
+  padding: 40px 50px;
+  box-sizing: border-box;
+}
+
+.info__card .card::before {
+  content: "";
+  border: 1.5px solid rgba(255, 255, 255, 0.5);
+  border-right: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 60%;
+  box-sizing: border-box;
+  border-radius: 20px 0 0 20px;
+}
+
+.info__card .card::after {
+  content: "";
+  border: 1.5px solid rgba(255, 255, 255, 0.3);
+  border-left: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 40%;
+  box-sizing: border-box;
+  border-radius: 0 20px 20px 0;
+}
+
+.info__card {
+  font-family: Lato, sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.info__card .card__title p {
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 0;
+}
+
+.card__chip {
+  margin-bottom: 45px;
+  margin-top: 46px;
+}
+
+.card__chip img {
+  width: 60px;
+  height: 43px;
+}
+
+.card__footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card__footer div:nth-child(2) {
+  display: flex;
+  justify-content: ;
+  align-items: flex-end;
+}
+
+.card__footer .card__footer-info p {
+  margin: 0;
+}
+
+.card__footer .card__footer-date p {
+  margin: 0;
+}
+
+.card__footer .card__footer-info p:first-child {
+  margin-bottom: 8px;
+}
+
+.footer-text {
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.footer-text--big {
+  letter-spacing: 0.07em;
+  font-size: 20px;
+  line-height: 30px;
 }
